emptyDirDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emptydir-deploy
spec:
  selector:
    matchLabels:
      app: emptydir-deploy
  template:
    metadata:
      labels:
        app: emptydir-deploy
    spec:
      containers:
      - name: writer
        image: busybox:latest
        command: ["/bin/sh", "-c"]
        args:
          - while true; do
              echo "[$(date)] log" >> /logs/app.log;
              sleep 5;
            done
        volumeMounts:
        - name: emptydir-volume
          mountPath: /logs
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 2000
      volumes:
      - name: emptydir-volume
        emptyDir: {}
