manifest2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sql-pod
spec:
  containers:
    - name: mysql
      image: mysql:latest
    - name: php-myadmin
      image: phpmyadmin:latest
      ports:
        - containerPort: 80
