spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app: springboot-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
